[project]
name = "policyengine-profiler"
version = "0.1.0"
description = "Performance profiling tools for PolicyEngine simulations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"}
]

dependencies = [
    "policyengine-us>=1.189.0",
    "policyengine-uk>=1.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.setuptools.packages.find]
where = ["."]
include = ["policyengine_profiler*"]
